--- a/app/package.json
+++ b/app/package.json
@@ -12,7 +12,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
-    "react-scripts": "^5.0.1",
     "sql.js": "^1.9.0",
     "stream": "^0.0.2",
     "web-vitals": "^2.1.4"
@@ -45,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-scripts": "^5.0.1"
   }
 }
